@@ -1,8 +1,16 @@
 # Changelog
 
-## 0.1.2
+## 0.2.1
 
 * Fixed NDK path resolution on Windows by using `USERPROFILE` and normalizing path separators.
+
+## 0.2.0
+
+* Updated `native_toolchain_c` to `0.19.0`.
+* Updated `hooks` to `2.0.2`.
+* Updated `example` Kotlin version to `2.3.20`, `com.android.application` to `9.0.1` and `gradle` to `9.1.0`.
+* Added documentataion about adding `--enable-native-access=ALL-UNNAMED` to `org.gradle.jvmargs` in `gradle.properties`.
+* Added `--enable-native-access=ALL-UNNAMED` to `org.gradle.jvmargs` in `example/android/gradle.properties`.
 
 ## 0.1.1
 
